--- a/ml_product_hypothesis_generation_quickstart.ipynb
+++ b/ml_product_hypothesis_generation_quickstart.ipynb
@@ -13,12 +13,10 @@
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import shap\n",
-    "import clickhouse_connect\n",
     "import matplotlib.pyplot as plt\n",
     "import google.generativeai as genai\n",
     "\n",
     "from datetime import datetime\n",
-    "from sshtunnel import SSHTunnelForwarder\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from lightgbm import LGBMClassifier\n",
     "from econml.solutions.causal_analysis import CausalAnalysis\n",
@@ -54,7 +52,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#df = df.drop([\"client_id\"], axis=1)"
+    "df = df.drop([\"client_id\"], axis=1)"
    ]
   },
   {
